oci_cluster/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 9090 
  selector: 
    app: prometheus-server

---
apiVersion: v1
kind: Service
metadata:
  name: thanos-sidecar-oci
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - name: thanos-sidecar
      port: 10901
      targetPort: 10901
  selector:
    thanos-store-api: "true"
