oci_cluster/prometheus/prometheus-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
  - "prometheus.horibe.com.br"
  gateways:
  - default-ingress.default
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: prometheus-service
